created StarSystemFrame and StarSystemPanel classes that show info about the currently selected system in a separate window added fleet movement mechanics (in the system info panel if a fleet is selected there is a clickable button to move it there) added an option to claim system by paying a resource fee to take control over it the main frame, in the GraphicsUserInterface class, that contains all the components now contains a LayeredJPanel instance that contains all the components in-order to properly set layers of the components added Resource.toPrettyString(Collection<Resource> resources) and Resource.toPrettyHTMLString(Collection<Resource> resources) methods that return a good-looking string of all the resources contained in the resource collection they are given to help with displaying added a World.getSystemContainingFleet(Fleet fleet) method that returns the system that contains the inputted fleet